...

const { Navigator, Screen } = createNativeStackNavigator<AppRoutes>();

const Tab = createBottomTabNavigator<AppRoutes>();

const CustomTabExaminusButton = ({ children, onPress }: BottomTabBarButtonProps) => (
  <TouchableOpacity testID="tab-upload" style={{}} onPress={onPress}>
    <View
      style={{
        top: -40,
        width: 68,
        height: 68,
        marginLeft: 10,
...
      }}
    >
      <Tab.Screen
        name="homepage"
        component={Homepage}
        options={{
          tabBarTestID: 'tab-home',
          tabBarIcon: ({ focused }) => (
            <View>
              <Box
                w={12}
                height={12}
                bg={focused ? '#E6F7F5' : 'transparent'}
...
      />
      <Tab.Screen
        name="examList"
        component={ExamList}
        options={{
          unmountOnBlur: true,
          tabBarTestID: 'tab-exams',
          tabBarIcon: ({ focused }) => (
            <View>
              <Box
                w={12}
                height={12}
                bg={focused ? '#E6F7F5' : 'transparent'}
...
      />
      <Tab.Screen
        name="healthWallet"
        component={HealthWallet}
        options={{
          unmountOnBlur: true,
          tabBarTestID: 'tab-wallet',
          tabBarIcon: ({ focused }) => (
            <View>
              <Box
                w={12}
                height={12}
                bg={focused ? '#E6F7F5' : 'transparent'}
...
      />
      <Tab.Screen
        name="myAccount"
        component={MyAccount}
        options={{
          unmountOnBlur: true,
          tabBarTestID: 'tab-account',
          tabBarIcon: ({ focused }) => (
            <View>
              <Box
                w={12}
                height={12}
                bg={focused ? '#E6F7F5' : 'transparent'}
...
