...
    );
  }, [searchQuery]);

  const showUnits = !isLoading && !error && !!voucherData && !isExpired;

  return (
    <VStack testID="screen-bonus" flex={1} bg="gray.50">
      <StatusBar barStyle="dark-content" backgroundColor="transparent" translucent />

      <VStack pt={16} mx={6}>
        <Header title="Meu Voucher" handleBackTo={() => navigation.goBack()} />
      </VStack>

...
