...
      examInfo,
      chatbotNotifications: value,
    });
  }, [dailyReminders, healthInsights, examInfo, savePreference]);

  return (
    <View testID="screen-config-notifications" flex={1}>
      <StatusBar barStyle="dark-content" backgroundColor="transparent" translucent />

      {/* Header fixo */}
      <VStack pt={16} mx={6}>
        <Header title="Notificações" handleBackTo={() => navigation.goBack()} />
      </VStack>
...
