...
        </Box>
      </TouchableOpacity>
    ));
  }

  return (
    <VStack testID="screen-health-wallet" py={16} flex={1}>
      <StatusBar barStyle="dark-content" backgroundColor="transparent" translucent />
      <HeaderTitle title="Carteira de Saúde" withBackButton={() => navigation.navigate('homepage')} />

      <ScrollView ref={scrollRef} showsVerticalScrollIndicator={false}>
        <VStack flex={1} space={8} pt={2} pb={32}>
          <VStack flex={1} mx={6}>
...
