...
    const systemKey = currentSystem.sistema.toLowerCase();
    return systemEducationalContent[systemKey] || defaultSystemContent;
  }, [currentSystem?.sistema]);

  if (currentSystem) {
    return (
      <VStack testID="screen-heart-score" py={16}>
        <HeaderTitle
          title={`Score ${currentSystem.sistema}`}
          withBackButton={() => {
            navigation.navigate('healthWallet');
          }}
          badgeVariant={currentSystem.nivel as 'risco alto' | 'normal' | 'excelente'}
...
