...
      </VStack>
    );
  }

  return (
    <>
      <VStack testID="screen-exam-detail" my={16}>
        <HeaderDescription
          title={examSelected.laboratoryName || 'Laboratório'}
          withBackButton={() => navigation.navigate('examList')}
          position="fixed"
          onDeletePress={() => setIsDeleteModalOpen(true)}
        />
...
