...
          <Text fontSize={14} fontWeight={500} lineHeight={22.4} color="gray.300" textAlign="center" mt={2}>
            Selecione a opção abaixo para que{'\n'}
            possamos simplificar sua saúde:
          </Text>

          <HStack space={4} mt={8} mb={4}>
            <TouchableOpacity testID="btn-upload-pdf" onPress={handleSelectFile}>
              <Box
                bg="ciano.300"
                w={40}
                h={20}
                py={2}
                px={4}
...
