...
    };

    openURL(urls[platform], `Não foi possível abrir ${platform}.`);
  };

  return (
    <View testID="screen-about-us" flex={1}>
      <StatusBar barStyle="dark-content" backgroundColor="transparent" translucent />

      {/* Header fixo */}
      <VStack pt={16} mx={6}>
        <Header title="Sobre nós" handleBackTo={() => navigation.goBack()} />
      </VStack>
...
