...
import { Header } from '../components/header/header';

export function ContactUs() {
  const navigation = useNavigation<AppNavigatorRoutesProps>();

  return (
    <VStack testID="screen-contact-us" flex={1} py={16} mx={6}>
      <Header title="Fale Conosco" handleBackTo={() => navigation.goBack()} />

      <VStack mt={24} mb={16} space={3} alignItems={'center'}>
        <Image source={Logo} defaultSource={Logo} alt="Vetor" resizeMode="stretch" />
        <Text color="gray.900" fontSize={28} fontWeight={800} lineHeight={32} letterSpacing={-0.96}>
          Examinus v{Constants.expoConfig?.version ?? '?.?.?'}
...
