...
                    editable={false}
                    errorMessage={errors.data?.message}
                  />

                  {show && (
                    <DateTimePicker
                      testID="dateTimePicker"
                      value={date}
                      mode="date"
                      is24Hour={true}
                      onChange={handleDateSelected}
                    />
                  )}
...
