appId: com.examinus.app
name: "Configurações - Notificações"
tags:
  - authenticated
---
- runFlow: ../utils/wait_for_home.yaml

- tapOn:
    id: "tab-account"
- tapOn:
    id: "tab-account"
- waitForAnimationToEnd:
    timeout: 3000

- extendedWaitUntil:
    visible:
      id: "screen-settings"
    timeout: 10000

- tapOn:
    id: "card-notifications"

- extendedWaitUntil:
    visible:
      id: "screen-config-notifications"
    timeout: 10000

- takeScreenshot: "28_settings_notifications"

- tapOn:
    id: "btn-back"

- extendedWaitUntil:
    visible:
      id: "screen-settings"
    timeout: 10000

- tapOn:
    id: "tab-home"

- extendedWaitUntil:
    visible:
      id: "screen-homepage"
    timeout: 10000
